# react-axum-template

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml
src/: axum.rs  main.rs  node.rs  option.rs  progress.rs
template/: Dockerfile  Taskfile.yaml  compose.yml  index.tsx  main.rs
