[package]
name = "react-axum-template"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A template for React in Axum"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
dialoguer = "0.11.0"
indicatif = "0.18.0"
tokio = { version = "1.43.0", features = ["full"] }
which = "7.0.1"

[profile.release]
strip = true
