[package]
description = "A template for React in Axum"
edition = "2021"
license = "MIT"
name = "react-axum-template"
version = "0.1.2"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
dialoguer = "0.12.0"
indicatif = "0.18.0"
tokio = { version = "1.43.0", features = ["full"] }
which = "8.0.0"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
strip = true
